--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "ts-node src/server.ts",
     "build": "tsc",
     "serve": "node dist/app.js",
     "test": "jest"
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/socket.io": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
