--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/socket.io": "^3.0.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
+    "openai": "^3.3.0",
+    "readline-sync": "^1.4.10",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
